# aws-metrics-provider

./: .env.example  Cargo.toml  README.md
.github/workflows/: deploy-aws-lambda.yml
src/: lib.rs  main.rs  models.rs
