[package]
edition = "2021"
name = "aws-metrics-provider"
version = "0.1.0"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
anyhow = {version = "1.0.65", features = ["backtrace"]}
async-once-cell = "0.4.3"
aws-config = "0.54.1"
aws-sdk-cloudwatch = "0.24.0"
aws-smithy-types = "0.54.4"
chrono = "0.4.24"
dotenv = "0.15.0"
envy = "0.4.2"
fancy-regex = "0.11.0"
lambda_http = {version = "0.7", default-features = false, features = ["apigw_http"]}
lambda_runtime = "0.7"
once_cell = "1.17.1"
reqwest = {version = "0.11.14", features = ["json"]}
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.93"
tokio = {version = "1", features = ["macros"]}
tracing = {version = "0.1", features = ["log"]}
tracing-subscriber = {version = "0.3.16", default-features = false, features = ["fmt"]}
